# ground-cite

./: .gitignore  LICENSE  README.md
GroundCite/: AzuriteConfig  CONTRIBUTING.md  LICENSE  README.md  function.json  function_app.py  local.settings.json  pyproject.toml  requirements_old.txt
GroundCite/docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_LIGHT.md  FAQ.md  USAGE.md
GroundCite/gemini_groundcite/: __init__.py  __main__.py  cli.py  exceptions.py  main.py
GroundCite/gemini_groundcite/config/: __init__.py  logger.py  settings.py
GroundCite/gemini_groundcite/core/: __init__.py
GroundCite/gemini_groundcite/core/agents/: __init__.py  ai_agent.py
GroundCite/gemini_groundcite/core/agents/clients/: __init__.py  google_gen_ai_client.py  open_ai_client.py
GroundCite/gemini_groundcite/core/agents/executors/: __init__.py  citation_processor.py  core_helper.py  graph_executor.py  graph_state.py
GroundCite/gemini_groundcite/core/agents/executors/nodes/: orchestration_node.py  parse_node.py  search_aggregator_node.py  search_node.py  validation_aggregator_node.py  validation_node.py
GroundCite/gemini_groundcite/core/di/: __init__.py  core_di.py
GroundCite/gemini_groundcite/core/models/: __init__.py  citation.py  search_request.py
GroundCite/gemini_groundcite/core/utils/: prompt_utils.py
examples/sample-react/: package-lock.json  package.json
examples/sample-react/public/: index.html  manifest.json
examples/sample-react/src/: App.css  App.js  index.css
examples/sample-react/src/components/: ConfigurationModal.js  Header.js  QueryAnalysisUI.js  QueryInput.js  Responsive.css  ResultsDisplay.js  styles.js
examples/sample-react/src/services/: api.js
